// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`telepath: wagtail.blocks.ListBlock blocks can be duplicated 1`] = `
"<div class="c-sf-help">
          <div class="help">
            use <strong>a few</strong> of these
          </div>
        </div><div class="">
        <input type="hidden" name="the-prefix-count" data-streamfield-list-count="" value="3">

        <div data-streamfield-list-container=""><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="11111111-1111-1111-1111-111111111111">
        <input type="hidden" name="the-prefix-0-deleted" value="">
        <input type="hidden" name="the-prefix-0-order" value="0">
        <input type="hidden" name="the-prefix-0-type" value="">
        <input type="hidden" name="the-prefix-0-id" value="11111111-1111-1111-1111-111111111111">
        <section class="w-panel w-panel--nested" id="block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-toggle="" aria-controls="block-11111111-1111-1111-1111-111111111111-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-11111111-1111-1111-1111-111111111111-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up" disabled="disabled">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-11111111-1111-1111-1111-111111111111-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-0-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-0-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-0-value" id="the-prefix-0-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="22222222-2222-2222-2222-222222222222">
        <input type="hidden" name="the-prefix-1-deleted" value="">
        <input type="hidden" name="the-prefix-1-order" value="1">
        <input type="hidden" name="the-prefix-1-type" value="">
        <input type="hidden" name="the-prefix-1-id" value="22222222-2222-2222-2222-222222222222">
        <section class="w-panel w-panel--nested" id="block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-toggle="" aria-controls="block-22222222-2222-2222-2222-222222222222-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-22222222-2222-2222-2222-222222222222-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-22222222-2222-2222-2222-222222222222-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-1-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-1-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-1-value" id="the-prefix-1-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="fake-uuid-v4-value">
        <input type="hidden" name="the-prefix-2-deleted" value="">
        <input type="hidden" name="the-prefix-2-order" value="2">
        <input type="hidden" name="the-prefix-2-type" value="">
        <input type="hidden" name="the-prefix-2-id" value="fake-uuid-v4-value">
        <section class="w-panel w-panel--nested" id="block-fake-uuid-v4-value-section" aria-labelledby="block-fake-uuid-v4-value-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-fake-uuid-v4-value-section" aria-labelledby="block-fake-uuid-v4-value-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-fake-uuid-v4-value-heading" data-panel-toggle="" aria-controls="block-fake-uuid-v4-value-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-fake-uuid-v4-value-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-fake-uuid-v4-value-section" aria-labelledby="block-fake-uuid-v4-value-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-fake-uuid-v4-value-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-2-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-2-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-2-value" id="the-prefix-2-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock blocks can be reordered downward 1`] = `
"<div class="c-sf-help">
          <div class="help">
            use <strong>a few</strong> of these
          </div>
        </div><div class="">
        <input type="hidden" name="the-prefix-count" data-streamfield-list-count="" value="2">

        <div data-streamfield-list-container=""><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="22222222-2222-2222-2222-222222222222">
        <input type="hidden" name="the-prefix-1-deleted" value="">
        <input type="hidden" name="the-prefix-1-order" value="0">
        <input type="hidden" name="the-prefix-1-type" value="">
        <input type="hidden" name="the-prefix-1-id" value="22222222-2222-2222-2222-222222222222">
        <section class="w-panel w-panel--nested" id="block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-toggle="" aria-controls="block-22222222-2222-2222-2222-222222222222-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-22222222-2222-2222-2222-222222222222-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up" disabled="disabled">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-22222222-2222-2222-2222-222222222222-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-1-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-1-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-1-value" id="the-prefix-1-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="11111111-1111-1111-1111-111111111111">
        <input type="hidden" name="the-prefix-0-deleted" value="">
        <input type="hidden" name="the-prefix-0-order" value="1">
        <input type="hidden" name="the-prefix-0-type" value="">
        <input type="hidden" name="the-prefix-0-id" value="11111111-1111-1111-1111-111111111111">
        <section class="w-panel w-panel--nested" id="block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-toggle="" aria-controls="block-11111111-1111-1111-1111-111111111111-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-11111111-1111-1111-1111-111111111111-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-11111111-1111-1111-1111-111111111111-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-0-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-0-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-0-value" id="the-prefix-0-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock blocks can be reordered upward 1`] = `
"<div class="c-sf-help">
          <div class="help">
            use <strong>a few</strong> of these
          </div>
        </div><div class="">
        <input type="hidden" name="the-prefix-count" data-streamfield-list-count="" value="2">

        <div data-streamfield-list-container=""><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="22222222-2222-2222-2222-222222222222">
        <input type="hidden" name="the-prefix-1-deleted" value="">
        <input type="hidden" name="the-prefix-1-order" value="0">
        <input type="hidden" name="the-prefix-1-type" value="">
        <input type="hidden" name="the-prefix-1-id" value="22222222-2222-2222-2222-222222222222">
        <section class="w-panel w-panel--nested" id="block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-toggle="" aria-controls="block-22222222-2222-2222-2222-222222222222-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-22222222-2222-2222-2222-222222222222-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up" disabled="disabled">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-22222222-2222-2222-2222-222222222222-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-1-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-1-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-1-value" id="the-prefix-1-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="11111111-1111-1111-1111-111111111111">
        <input type="hidden" name="the-prefix-0-deleted" value="">
        <input type="hidden" name="the-prefix-0-order" value="1">
        <input type="hidden" name="the-prefix-0-type" value="">
        <input type="hidden" name="the-prefix-0-id" value="11111111-1111-1111-1111-111111111111">
        <section class="w-panel w-panel--nested" id="block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-toggle="" aria-controls="block-11111111-1111-1111-1111-111111111111-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-11111111-1111-1111-1111-111111111111-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-11111111-1111-1111-1111-111111111111-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-0-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-0-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-0-value" id="the-prefix-0-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock blocks can be split 1`] = `
"<div class="c-sf-help">
          <div class="help">
            use <strong>a few</strong> of these
          </div>
        </div><div class="">
        <input type="hidden" name="the-prefix-count" data-streamfield-list-count="" value="3">

        <div data-streamfield-list-container=""><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="11111111-1111-1111-1111-111111111111">
        <input type="hidden" name="the-prefix-0-deleted" value="">
        <input type="hidden" name="the-prefix-0-order" value="0">
        <input type="hidden" name="the-prefix-0-type" value="">
        <input type="hidden" name="the-prefix-0-id" value="11111111-1111-1111-1111-111111111111">
        <section class="w-panel w-panel--nested" id="block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-toggle="" aria-controls="block-11111111-1111-1111-1111-111111111111-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-11111111-1111-1111-1111-111111111111-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up" disabled="disabled">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-11111111-1111-1111-1111-111111111111-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-0-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-0-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-0-value" id="the-prefix-0-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath-disabled="">
        <input type="hidden" name="the-prefix-2-deleted" value="">
        <input type="hidden" name="the-prefix-2-order" value="1">
        <input type="hidden" name="the-prefix-2-type" value="">
        <input type="hidden" name="the-prefix-2-id" value="">
        <section class="w-panel w-panel--nested" id="block-undefined-section" aria-labelledby="block-undefined-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-undefined-section" aria-labelledby="block-undefined-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-undefined-heading" data-panel-toggle="" aria-controls="block-undefined-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-undefined-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-undefined-section" aria-labelledby="block-undefined-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-undefined-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-2-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-2-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-2-value" id="the-prefix-2-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="22222222-2222-2222-2222-222222222222">
        <input type="hidden" name="the-prefix-1-deleted" value="">
        <input type="hidden" name="the-prefix-1-order" value="2">
        <input type="hidden" name="the-prefix-1-type" value="">
        <input type="hidden" name="the-prefix-1-id" value="22222222-2222-2222-2222-222222222222">
        <section class="w-panel w-panel--nested" id="block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-toggle="" aria-controls="block-22222222-2222-2222-2222-222222222222-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-22222222-2222-2222-2222-222222222222-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-22222222-2222-2222-2222-222222222222-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-1-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-1-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-1-value" id="the-prefix-1-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock deleteBlock() deletes a block 1`] = `
"<div class="c-sf-help">
          <div class="help">
            use <strong>a few</strong> of these
          </div>
        </div><div class="">
        <input type="hidden" name="the-prefix-count" data-streamfield-list-count="" value="2">

        <div data-streamfield-list-container=""><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="11111111-1111-1111-1111-111111111111">
        <input type="hidden" name="the-prefix-0-deleted" value="">
        <input type="hidden" name="the-prefix-0-order" value="0">
        <input type="hidden" name="the-prefix-0-type" value="">
        <input type="hidden" name="the-prefix-0-id" value="11111111-1111-1111-1111-111111111111">
        <section class="w-panel w-panel--nested" id="block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-toggle="" aria-controls="block-11111111-1111-1111-1111-111111111111-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-11111111-1111-1111-1111-111111111111-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up" disabled="disabled">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-11111111-1111-1111-1111-111111111111-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-0-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-0-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-0-value" id="the-prefix-0-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button" style="display: none;" aria-hidden="true">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="22222222-2222-2222-2222-222222222222" style="display: none;" aria-hidden="true">
        <input type="hidden" name="the-prefix-1-deleted" value="1">
        <input type="hidden" name="the-prefix-1-order" value="1">
        <input type="hidden" name="the-prefix-1-type" value="">
        <input type="hidden" name="the-prefix-1-id" value="22222222-2222-2222-2222-222222222222">
        <section class="w-panel w-panel--nested" id="block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-toggle="" aria-controls="block-22222222-2222-2222-2222-222222222222-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-22222222-2222-2222-2222-222222222222-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-22222222-2222-2222-2222-222222222222-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-1-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-1-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-1-value" id="the-prefix-1-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock it renders correctly 1`] = `
"<div class="c-sf-help">
          <div class="help">
            use <strong>a few</strong> of these
          </div>
        </div><div class="">
        <input type="hidden" name="the-prefix-count" data-streamfield-list-count="" value="2">

        <div data-streamfield-list-container=""><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="11111111-1111-1111-1111-111111111111">
        <input type="hidden" name="the-prefix-0-deleted" value="">
        <input type="hidden" name="the-prefix-0-order" value="0">
        <input type="hidden" name="the-prefix-0-type" value="">
        <input type="hidden" name="the-prefix-0-id" value="11111111-1111-1111-1111-111111111111">
        <section class="w-panel w-panel--nested" id="block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-toggle="" aria-controls="block-11111111-1111-1111-1111-111111111111-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-11111111-1111-1111-1111-111111111111-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up" disabled="disabled">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-11111111-1111-1111-1111-111111111111-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-0-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-0-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-0-value" id="the-prefix-0-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="22222222-2222-2222-2222-222222222222">
        <input type="hidden" name="the-prefix-1-deleted" value="">
        <input type="hidden" name="the-prefix-1-order" value="1">
        <input type="hidden" name="the-prefix-1-type" value="">
        <input type="hidden" name="the-prefix-1-id" value="22222222-2222-2222-2222-222222222222">
        <section class="w-panel w-panel--nested" id="block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-toggle="" aria-controls="block-22222222-2222-2222-2222-222222222222-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-22222222-2222-2222-2222-222222222222-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-22222222-2222-2222-2222-222222222222-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-1-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-1-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-1-value" id="the-prefix-1-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock setError passes error messages to children 1`] = `
"<div class="c-sf-help">
          <div class="help">
            use <strong>a few</strong> of these
          </div>
        </div><div class="">
        <input type="hidden" name="the-prefix-count" data-streamfield-list-count="" value="2">

        <div data-streamfield-list-container=""><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="11111111-1111-1111-1111-111111111111">
        <input type="hidden" name="the-prefix-0-deleted" value="">
        <input type="hidden" name="the-prefix-0-order" value="0">
        <input type="hidden" name="the-prefix-0-type" value="">
        <input type="hidden" name="the-prefix-0-id" value="11111111-1111-1111-1111-111111111111">
        <section class="w-panel w-panel--nested" id="block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-toggle="" aria-controls="block-11111111-1111-1111-1111-111111111111-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-11111111-1111-1111-1111-111111111111-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up" disabled="disabled">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-11111111-1111-1111-1111-111111111111-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-0-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-0-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-0-value" id="the-prefix-0-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="22222222-2222-2222-2222-222222222222">
        <input type="hidden" name="the-prefix-1-deleted" value="">
        <input type="hidden" name="the-prefix-1-order" value="1">
        <input type="hidden" name="the-prefix-1-type" value="">
        <input type="hidden" name="the-prefix-1-id" value="22222222-2222-2222-2222-222222222222">
        <section class="w-panel w-panel--nested" id="block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-toggle="" aria-controls="block-22222222-2222-2222-2222-222222222222-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-22222222-2222-2222-2222-222222222222-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-22222222-2222-2222-2222-222222222222-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input w-field--error" data-field="">
          <div class="w-field__errors" id="the-prefix-1-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true"><use href="#icon-warning"></use></svg>
          <p class="error-message">Not as good as the first one.</p></div>
          <div class="w-field__help" id="the-prefix-1-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-1-value" id="the-prefix-1-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button></div>
      </div>"
`;

exports[`telepath: wagtail.blocks.ListBlock setError renders non-block errors 1`] = `
"<div class="c-sf-help">
          <div class="help">
            use <strong>a few</strong> of these
          </div>
        </div><div class=""><p class="help-block help-critical">At least three blocks are required</p>
        <input type="hidden" name="the-prefix-count" data-streamfield-list-count="" value="2">

        <div data-streamfield-list-container=""><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="11111111-1111-1111-1111-111111111111">
        <input type="hidden" name="the-prefix-0-deleted" value="">
        <input type="hidden" name="the-prefix-0-order" value="0">
        <input type="hidden" name="the-prefix-0-type" value="">
        <input type="hidden" name="the-prefix-0-id" value="11111111-1111-1111-1111-111111111111">
        <section class="w-panel w-panel--nested" id="block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-11111111-1111-1111-1111-111111111111-heading" data-panel-toggle="" aria-controls="block-11111111-1111-1111-1111-111111111111-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-11111111-1111-1111-1111-111111111111-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-11111111-1111-1111-1111-111111111111-section" aria-labelledby="block-11111111-1111-1111-1111-111111111111-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up" disabled="disabled">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-11111111-1111-1111-1111-111111111111-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-0-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-0-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-0-value" id="the-prefix-0-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button><div data-streamfield-child="" data-contentpath="22222222-2222-2222-2222-222222222222">
        <input type="hidden" name="the-prefix-1-deleted" value="">
        <input type="hidden" name="the-prefix-1-order" value="1">
        <input type="hidden" name="the-prefix-1-type" value="">
        <input type="hidden" name="the-prefix-1-id" value="22222222-2222-2222-2222-222222222222">
        <section class="w-panel w-panel--nested" id="block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel="">
          <div class="w-panel__header">
            <a class="w-panel__anchor w-panel__anchor--prefix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-anchor="">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <button class="w-panel__toggle" type="button" aria-label="Toggle section" aria-describedby="block-22222222-2222-2222-2222-222222222222-heading" data-panel-toggle="" aria-controls="block-22222222-2222-2222-2222-222222222222-content" aria-expanded="true">
              <svg class="icon icon-pilcrow w-panel__icon" aria-hidden="true">
                <use href="#icon-pilcrow"></use>
              </svg>
            </button>
            <h2 class="w-panel__heading w-panel__heading--label" aria-level="3" id="block-22222222-2222-2222-2222-222222222222-heading" data-panel-heading="">
              <span data-panel-heading-text="" class="c-sf-block__title"></span>
              <span class="c-sf-block__type"></span>
              <span class="w-required-mark" data-panel-required="">*</span>
            </h2>
            <a class="w-panel__anchor w-panel__anchor--suffix" href="#block-22222222-2222-2222-2222-222222222222-section" aria-labelledby="block-22222222-2222-2222-2222-222222222222-heading">
              <svg class="icon icon-link w-panel__icon" aria-hidden="true">
                <use href="#icon-link"></use>
              </svg>
            </a>
            <div class="w-panel__divider"></div>
            <div class="w-panel__controls" data-panel-controls=""><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_UP" title="Move up">
        <svg class="icon icon-arrow-up" aria-hidden="true">
          <use href="#icon-arrow-up"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="MOVE_DOWN" title="Move down" disabled="disabled">
        <svg class="icon icon-arrow-down" aria-hidden="true">
          <use href="#icon-arrow-down"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DRAG" title="Drag">
        <svg class="icon icon-grip" aria-hidden="true">
          <use href="#icon-grip"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DUPLICATE" title="Duplicate">
        <svg class="icon icon-copy" aria-hidden="true">
          <use href="#icon-copy"></use>
        </svg>
      </button><button type="button" class="button button--icon text-replace white" data-streamfield-action="DELETE" title="Delete">
        <svg class="icon icon-bin" aria-hidden="true">
          <use href="#icon-bin"></use>
        </svg>
      </button></div>
          </div>
          <div id="block-22222222-2222-2222-2222-222222222222-content" class="w-panel__content">
            <div class="w-field__wrapper" data-field-wrapper="">
        <div class="w-field w-field--char_field w-field--admin_auto_height_text_input" data-field="">
          <div class="w-field__errors" id="the-prefix-1-value-errors" data-field-errors="">
            <svg class="icon icon-warning w-field__errors-icon" aria-hidden="true" hidden=""><use href="#icon-warning"></use></svg>
          </div>
          <div class="w-field__help" id="the-prefix-1-value-helptext" data-field-help=""></div>
          <div class="w-field__input" data-field-input="">
            <p name="the-prefix-1-value" id="the-prefix-1-value">The widget</p>
          </div>
        </div>
      </div>
          </div>
        </section>
      </div><button type="button" title="Add" data-streamfield-list-add="" class="c-sf-add-button">
        <svg class="icon icon-plus" aria-hidden="true"><use href="#icon-plus"></use></svg>
      </button></div>
      </div>"
`;
